Move to base16 solarflare color scheme. Update zprezto and tmux conf.

--- a/.pshu/conf/custom.conf
+++ b/.pshu/conf/custom.conf
@@ -4,6 +4,7 @@
 # Uncomment the line below to force the login screen to use Xorg
 WaylandEnable=false
 
+# Automatically log in
 AutomaticLoginEnable=True
 AutomaticLogin=pshu
 
