Change to oceanicnext theme.

--- a/.pshu/tmux/tmux.conf
+++ b/.pshu/tmux/tmux.conf
@@ -15,6 +15,9 @@ set-option -g default-shell /bin/zsh
 # Bigger history
 set -g history-limit 10000
 
+# Enable mouse support
+set -g mouse on
+
 # Create splits and vertical splits
 bind-key v split-window -h -p 50 -c "#{pane_current_path}"
 bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
