Disable automatic login, fix typo in acpi interrupt service.

--- a/.pshu/conf/60-touchpad.conf
+++ b/.pshu/conf/60-touchpad.conf
@@ -1,11 +1,11 @@
 # Trackpad Drivers
 
-Section "InputClass"
-	Identifier "libinput touchpad catchall"
-	MatchIsTouchpad "on"
-	Driver "libinput"
-	MatchDevicePath "/dev/input/event*"
-EndSection
+#Section "InputClass"
+#	Identifier "libinput touchpad catchall"
+#	MatchIsTouchpad "on"
+#	Driver "libinput"
+#	MatchDevicePath "/dev/input/event*"
+#EndSection
  
 Section "InputClass"
         Identifier "touchpad ignore duplicates"
@@ -34,7 +34,7 @@ Section "InputClass"
         Option          "ClickFinger3" "0"
         Option          "ButtonMoveEmulate" "false"
         Option          "ButtonIntegrated" "true"
-        Option          "ClickTime" "25"
+        Option          "ClickTime" "30"
         Option          "BottomEdge" "30"
         Option          "SwipeLeftButton" "8"
         Option          "SwipeRightButton" "9"
