--- a/.pshu/conf/custom.conf
+++ b/.pshu/conf/custom.conf
@@ -2,11 +2,18 @@
 
 [daemon]
 # Uncomment the line below to force the login screen to use Xorg
+#
+# Currently held back from using Wayland by the following:
+# - sakuraterm need a native X11 window
+# - mtrack only loads via Xorg
+#
+# Currently Wayland fixes:
+# - trackpad disable on initial login screen
 WaylandEnable=false
 
 # Automatically log in
-AutomaticLoginEnable=True
-AutomaticLogin=pshu
+#AutomaticLoginEnable=True
+#AutomaticLogin=pshu
 
 [security]
 
