--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set-option -g default-shell /bin/zsh
 set -g history-limit 10000
 
 # Enable mouse support
-set -g mouse on
+#set -g mouse on
 
 # Create splits and vertical splits
 bind-key v split-window -h -p 50 -c "#{pane_current_path}"
