Add zsh to dependencies. Add YCM vim plugin.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set-option -g default-shell /bin/zsh
 set -g history-limit 10000
 
 # Enable mouse support
-#set -g mouse on
+set -g mouse on
 
 # Create splits and vertical splits
 bind-key v split-window -h -p 50 -c "#{pane_current_path}"
@@ -49,7 +49,7 @@ bind c new-window -c "#{pane_current_path}"
 # Copy and paste between x and tmux clipboards
 set -g assume-paste-time 0
 bind C-p run "tmux set-buffer \"$(xsel --clipboard --output)\"; tmux paste-buffer"
-bind C-y run "tmux save-buffer | xsel --clipboard --input" \; display-message "Copied to clipboard."
+bind C-y run "tmux save-buffer | xsel --clipboard --input" \; display "Copied to clipboard."
 
 # Toggle synchronization of all panes
 bind e setw synchronize-panes on
