Change tmux and vim colour configuration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ bind C-a send-prefix
 bind-key ^D detach-client
 
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
-set -g default-terminal screen-256color
+set -g default-terminal tmux-256color
 
 # Set default shell to zsh.
 set-option -g default-shell /bin/zsh
@@ -54,10 +54,6 @@ bind C-y run "tmux save-buffer | xsel --clipboard --input" \; display "Copied to
 # Toggle synchronization of all panes
 bind e setw synchronize-panes on
 bind E setw synchronize-panes off
-
-# Index windows from 1
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
 
 # Hide status bar
 set-option -g status off
