Check tmux version and load the appropriate mouse config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set-option -g default-shell /bin/zsh
 set -g history-limit 10000
 
 # Enable mouse support
-set -g mouse on
+if-shell "tmux -V |awk ' {split($2, ver, \".\"); if (ver[1] < 2) exit 1 ; else if (ver[1] == 2 && ver[2] < 1) exit 1 }' " 'source $HOME/.pshu/tmux/gt_2.1.conf' 'source $HOME/.pshu/tmux/lt_2.1.conf'
 
 # Create splits and vertical splits
 bind-key v split-window -h -p 50 -c "#{pane_current_path}"
