--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,15 @@
-[submodule "base16-shell"]
-	path = config/base16-shell
-	url = https://github.com/chriskempson/base16-shell.git
-
-[submodule "vundle"]
+[submodule "zsh/base16-shell"]
+	path = zsh/base16-shell
+	url = https://github.com/chriskempson/base16-shell
+[submodule "vim/bundle/vundle"]
     path = vim/bundle/vundle
-    url = https://github.com/VundleVim/Vundle.vim.git
-
-[submodule "zprezto"]
-	path = zsh/zprezto
-	url = https://github.com/sorin-ionescu/prezto.git
+    url = https://github.com/VundleVim/Vundle.vim
+[submodule "zsh/pure"]
+	path = zsh/pure
+	url = https://github.com/sindresorhus/pure
+[submodule "zsh/zsh-syntax-highlighting"]
+	path = zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "zsh/zsh-autosuggestions"]
+	path = zsh/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
