--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,9 +3,6 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# Option to not have to keep finger on control
-bind-key ^D detach-client
-
 # Default termtype. If the rcfile sets $TERM, that overrides this value.
 set -g default-terminal tmux-256color
 
@@ -21,8 +18,8 @@ if-shell "tmux -V |awk ' {split($2, ver, \".\"); if (ver[1] < 2) exit 1 ; else i
 # Create splits and vertical splits
 bind-key v split-window -h -p 50 -c "#{pane_current_path}"
 bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
-bind-key s split-window -p 50 -c "#{pane_current_path}"
-bind-key ^S split-window -p 50 -c "#{pane_current_path}"
+bind-key h split-window -p 50 -c "#{pane_current_path}"
+bind-key ^H split-window -p 50 -c "#{pane_current_path}"
 
 # Switch panes
 is_vim='echo "{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
